--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/travel_office?useSSL=false&serverTimezone=CET
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Bartek
+spring.datasource.username=TravelOffice
+spring.datasource.password=TravelOffice
