--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+server.port=8082
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/travel_office?useSSL=false&serverTimezone=CET
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=TravelOffice
-spring.datasource.password=TravelOffice
+spring.datasource.username=root
+spring.datasource.password=19951015
+
+
+
